<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="text_name">nama</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_date">Judul tanggal</string>
    <string name="text_title_name">Judul Nama</string>
    <string name="text_date">Teks tanggal</string>
    <string name="label_rating">Rating</string>
    <string name="text_overview">Teks deskripsi</string>
    <string name="overview">deskripsi</string>
    <string name="up">Upcoming movies</string>
    <string name="popular">Popular Movie</string>
    <string name="movies">Movies</string>
    <string name="tv">Tv Shows</string>
</resources>
