<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="170dp"
            android:layout_height="210dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_name"
            app:layout_constraintBottom_toBottomOf="@id/img_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toEndOf="@id/img_detail"
            app:layout_constraintTop_toTopOf="@id/img_detail"
            app:layout_constraintVertical_bias="0.0"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/text_title_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tv_text_title"
            app:layout_constraintTop_toBottomOf="@id/tv_text_title"/>

        <TextView
            android:id="@+id/tv_title_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_title_date"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/text_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tv_title_date"
            app:layout_constraintTop_toBottomOf="@id/tv_title_date"/>

        <TextView
            android:id="@+id/rating_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_rating"
            app:layout_constraintStart_toStartOf="@id/img_detail"
            app:layout_constraintTop_toBottomOf="@id/img_detail"/>

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:max="5"
            android:stepSize="0.1"
            app:layout_constraintStart_toStartOf="@id/rating_label"
            app:layout_constraintTop_toBottomOf="@id/rating_label"/>
        <TextView
            android:id="@+id/tv_title_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_overview"
            app:layout_constraintStart_toStartOf="@id/rating_bar"
            app:layout_constraintTop_toBottomOf="@id/rating_bar"/>
        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@id/tv_title_overview"
            app:layout_constraintTop_toBottomOf="@id/tv_title_overview"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>